# rust_fahrenheit_to_celsius

./: Cargo.toml
src/: main.rs
