[package]
name = "temperature"
version = "0.1.0"
authors = ["elayaws"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.x86_64-apple-darwin]
linker = "x86_64-apple-darwin15-gcc"
ar = "x86_64-apple-darwin15-ar"
